Version 1.18 (cleanup directory and fix some warnings in Java 21)